# backend/docs/swagger.yaml
@@ -50,6 +50,9 @@ definitions:
       category_id:
         example: a1b2c3d4e5f6g7h8
         type: string
+      difficulty:
+        example: medium
+        type: string
       id:
         example: x9y8z7w6v5u4t3s2
         type: string
@@ -130,6 +133,9 @@ definitions:
       category_id:
         example: a1b2c3d4e5f6g7h8
         type: string
+      difficulty:
+        example: medium
+        type: string
       language:
         example: go
         type: string
@@ -144,6 +150,9 @@ definitions:
         type: string
       category_id:
         example: a1b2c3d4e5f6g7h8
+        type: string
+      difficulty:
+        example: medium
         type: string
       id:
         example: x9y8z7w6v5u4t3s2
@@ -237,6 +246,9 @@ definitions:
     properties:
       bank_type:
         example: theory
+        type: string
+      difficulty:
+        example: medium
         type: string
       language:
         example: go
@@ -356,6 +368,9 @@ definitions:
         type: string
       category_id:
         example: a1b2c3d4e5f6g7h8
+        type: string
+      difficulty:
+        example: medium
         type: string
       id:
         example: x9y8z7w6v5u4t3s2
